--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "biurad/php-library-starter",
+    "name": "divineniiquaye/php-invoker",
     "description": "A PHP package template repository.",
     "type": "library",
-    "keywords": ["biurad","biuradphp","php7"],
+    "keywords": ["biurad","invoker","resolver","php7"],
     "homepage": "https://www.biurad.com",
     "license": "BSD-3-Clause",
     "authors": [
@@ -16,13 +16,14 @@
         }
     ],
     "support": {
-        "docs": "https://docs.biurad.com/php-library-starter/",
-        "issues": "https://github.com/biurad/php-library-starter/issues",
-        "rss": "https://github.com/biurad/php-library-starter/releases.atom",
-        "source": "https://github.com/biurad/php-library-starter"
+        "docs": "https://docs.biurad.com/php-invoker/",
+        "issues": "https://github.com/divineniiquaye/php-invoker/issues",
+        "rss": "https://github.com/divineniiquaye/php-invoker/releases.atom",
+        "source": "https://github.com/divineniiquaye/php-invoker"
     },
     "require": {
-        "php": "^7.1 || ^8.0"
+        "php": "^7.1 || ^8.0",
+        "psr/container": "^1.0"
     },
     "require-dev": {
         "composer/package-versions-deprecated": "^1.8",
@@ -34,12 +35,12 @@
     },
     "autoload": {
         "psr-4": {
-            "Biurad\\Package\\": "src/"
+            "DivineNii\\Invoker\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Biurad\\Package\\Tests\\": "tests/"
+            "DivineNii\\Invoker\\Tests\\": "tests/"
         }
     },
     "scripts": {
