--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,7 +21,7 @@ jobs:
 
             - run: composer update --no-progress
 
-            - run: vendor/bin/phpcs --standard=psr12 --colors src tests
+            - run: vendor/bin/phpcs
 
     phpunit:
         name: PHPUnit on ${{ matrix.php }}
@@ -30,11 +30,6 @@ jobs:
             matrix:
                 php: ["7.2", "7.3", "7.4"]
                 coverage: [true]
-                composer-flags: [""]
-                include:
-                    - php: "8.0"
-                      coverage: false
-                      composer-flags: "--ignore-platform-req=php"
 
         steps:
             - uses: actions/checkout@v2
@@ -46,16 +41,11 @@ jobs:
                   coverage: pcov
                   tools: composer:v2
 
-            - run: composer update --no-progress ${{ matrix.composer-flags }}
-
-            - run: vendor/bin/phpunit --no-coverage
-              if: ${{ !matrix.coverage }}
+            - run: composer update --no-progress
 
             - run: vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover
-              if: ${{ matrix.coverage }}
 
             - run: bash <(curl -s https://codecov.io/bash) -f coverage.clover
-              if: ${{ matrix.coverage }}
 
     phpstan:
         name: PHPStan
