--- a/psalm.xml.dist
+++ b/psalm.xml.dist
@@ -30,8 +30,8 @@
         <InvalidCatch>
             <errorLevel type="suppress">
                 <file name="src/CallableResolver.php"/>
-                <file name="src/ParameterResolver.php"/>
-                <file name="src/ResolverChain.php"/>
+                <file name="src/ArgumentResolver.php"/>
+                <file name="src/ArgumentResolver/ClassValueResolver.php"/>
             </errorLevel>
         </InvalidCatch>
 
@@ -59,5 +59,11 @@
                 <file name="src/CallableReflection.php"/>
             </errorLevel>
         </PossiblyInvalidArrayAccess>
+
+        <InvalidPropertyAssignmentValue>
+            <errorLevel type="suppress">
+                <file name="src/ArgumentResolver.php"/>
+            </errorLevel>
+        </InvalidPropertyAssignmentValue>
     </issueHandlers>
 </psalm>
