Fixed Github Actions tests fail on PHP 8

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,7 +6,11 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        php: ['7.2', '7.3', '7.4', '8.0' ]
+        php: ['7.2', '7.3', '7.4', '8.0']
+        ignore-versions: ['']
+        include:
+            - php: '8.0'
+              ignore-versions: '--ignore-platform-reqs'
     runs-on: ubuntu-latest
 
     steps:
@@ -35,7 +39,7 @@ jobs:
           restore-keys: ${{ runner.os }}-composer-
 
       - name: Install dependencies
-        run: composer update --no-progress --optimize-autoloader
+        run: composer update ${{ matrix.ignore-versions }} --no-progress --optimize-autoloader
 
       - name: Check Coding Standard
         run: vendor/bin/phpcs
