Updated GitHub action workflow test file

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,13 +4,23 @@ on: [push, pull_request]
 jobs:
   build:
     strategy:
+      fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-        php: ['7.2', '7.3', '7.4']
-        ignore-versions: ['']
+        operating-system: [ubuntu-latest, windows-latest, macos-latest]
+        php-versions: ['7.4', '8.0']
+        coverage: ["true"]
+        composer-flags: [""]
+        static-tests: ["true"]
         include:
-            - php: '8.0'
-              ignore-versions: '--ignore-platform-reqs'
+          - php-versions: "7.2"
+            static-tests: "false"
+
+          - php-versions: "7.3"
+            static-tests: "false"
+
+          - php-versions: "8.1"
+            coverage: "false"
+            composer-flags: "--ignore-platform-req=php"
     runs-on: ubuntu-latest
 
     steps:
@@ -20,8 +30,8 @@ jobs:
       - name: Setup PHP, with composer and extensions
         uses: shivammathur/setup-php@v2
         with:
-          php-version: ${{ matrix.php }}
-          extensions: mbstring, curl
+          php-version: ${{ matrix.php-versions }}
+          extensions: mbstring, xml, ctype, iconv, curl
           coverage: xdebug
           tools: composer:v2
 
@@ -39,18 +49,28 @@ jobs:
           restore-keys: ${{ runner.os }}-composer-
 
       - name: Install dependencies
-        run: composer update ${{ matrix.ignore-versions }} --no-progress --optimize-autoloader
+        run: composer install --no-progress --optimize-autoloader ${{ matrix.composer-flags }}
 
       - name: Check Coding Standard
         run: vendor/bin/phpcs
 
       - name: Test with Phpunit
         run: |
-          vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover
-          bash <(curl -s https://codecov.io/bash) -f coverage.clover
+          if [ "${{ !matrix.coverage }}" == "false" ]; then
+            vendor/bin/phpunit --no-coverage
+          else
+            vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover
+            bash <(curl -s https://codecov.io/bash) -f coverage.clover
+          fi
 
       - name: Test with Phpstan
-        run: vendor/bin/phpstan analyse
+        run: |
+          if [ "${{ matrix.static-tests }}" == "true" ]; then
+            vendor/bin/phpstan analyse
+          fi
 
       - name: Test with Psalm
-        run: vendor/bin/psalm
+        run: |
+          if [ "${{ matrix.static-tests }}" == "true" ]; then
+            vendor/bin/psalm --output-format=github
+          fi
