--- a/.travis.yml
+++ b/.travis.yml
@@ -8,20 +8,25 @@ cache:
 matrix:
     include:
         - php: 7.2
+          env: statictests=disallow
         - php: 7.3
+          env: statictests=disallow
         - php: 7.4
+          env: statictests=allow
+        - php: 8.0
+          env: statictests=allow
     fast_finish: true
 
 before_install:
     - composer self-update --preview
 
 install:
-    - composer update --no-interaction
+    - composer install --no-progress --optimize-autoloader
 
 script:
     - ./vendor/bin/phpcs
-    - ./vendor/bin/phpstan analyse
-    - ./vendor/bin/psalm
+    - if [ "$statictests" = "allow" ]; then ./vendor/bin/phpstan analyse; fi;
+    - if [ "$statictests" = "allow" ]; then ./vendor/bin/psalm; fi;
     - ./vendor/bin/phpunit --coverage-clover=coverage.xml
 
 after_success:
