--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
     },
     "require": {
         "php": "^7.1 || ^8.0",
-        "psr/container": "^1.0"
+        "psr/container": "^1.0",
+        "symfony/polyfill-php80": "^1.20"
     },
     "require-dev": {
         "composer/package-versions-deprecated": "^1.11",
@@ -31,7 +32,7 @@
         "phpstan/phpstan-strict-rules": "^0.12",
         "phpunit/phpunit": "^8.5 || ^9.5",
         "squizlabs/php_codesniffer": "^3.5",
-        "vimeo/psalm": "^3.11"
+        "vimeo/psalm": "^3.11 || ^4.0"
     },
     "autoload": {
         "psr-4": {
