--- a/psalm.xml.dist
+++ b/psalm.xml.dist
@@ -20,6 +20,10 @@
         </ignoreFiles>
     </projectFiles>
 
+    <stubs>
+        <file name="vendor/vimeo/psalm/stubs/Php80.php"/>
+    </stubs>
+
     <issueHandlers>
         <InvalidArgument>
             <errorLevel type="suppress">
@@ -31,7 +35,6 @@
             <errorLevel type="suppress">
                 <file name="src/CallableResolver.php"/>
                 <file name="src/ArgumentResolver.php"/>
-                <file name="src/ArgumentResolver/ClassValueResolver.php"/>
             </errorLevel>
         </InvalidCatch>
 
