--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     },
     "require": {
         "php": "^7.1 || ^8.0",
-        "psr/container": "^1.0",
+        "psr/container": "^1.1|^2.0",
         "symfony/polyfill-php80": "^1.20"
     },
     "require-dev": {
